@@ -73,7 +73,7 @@
 
   keepmode
 
-  blend
+  blend blend2
 
   xxx
 
