@@ -10,21 +10,18 @@
 
 % Boot loader splash areas to uncover.
 %
-%/bsplash.areas [
-%  [   0 146 640 166  true ]
-%  [  54  43 137  42 false ]
-%  [ 228  89 128  36 false ]
-%  [ 325  35 186  45 false ]
-%  [ 544  19  73 116 false ]
-%  [  19 353 172  62 false ]
-%  [ 199 406 104  41 false ]
-%  [ 308 327 134  42 false ]
-%  [ 427 384 177  42 false ]
-%] def
-
 /bsplash.areas [
-  [ 0 800 0 600 true ]
+  [ 327 230 144 108  true ]
+  [  82  68 131  35 false ]
+  [ 205 157 125  32 false ]
+  [ 431  77 173  37 false ]
+  [ 661 125  61 112 false ]
+  [  62 358 162  51 false ]
+  [ 204 461  95  36 false ]
+  [ 388 397 127  34 false ]
+  [ 560 450 169  39 false ]
 ] def
+
 
 % start value
 /rand.start time def
@@ -58,6 +55,8 @@
 %  7 0xffffff setpalette
   0 0 moveto 0 0 image.size image
 
+  "greeting.jpg" findfile /splash.file2 over def setimage
+
   % center image
   image.size screen.size exch 4 -1 roll sub 2 div 3 1 roll exch sub 2 div
   /bsplash.y exch def
@@ -65,8 +64,8 @@
 
   bsplash.areas 0 get
   dup 0 get over 1 get moveto currentpoint bsplash.x bsplash.y rmoveto
-  2 index 2 get 3 index 3 get 5 -1 roll pop image
-  500000 usleep
+  2 index 2 get 3 index 3 get 5 -1 roll pop blendit
+  700000 usleep
 
   {
     bsplash.areas rand over length mod get
@@ -74,8 +73,8 @@
       pop
     } {
       dup 0 get over 1 get moveto currentpoint bsplash.x bsplash.y rmoveto
-      2 index 2 get 3 index 3 get 5 -1 roll 4 true put image
-      50000 usleep
+      2 index 2 get 3 index 3 get 5 -1 roll 4 true put blendit
+      70000 usleep
     } ifelse
 
     true
@@ -87,7 +86,35 @@
 
   setimage
 
+  splash.file2 free /splash.file2 .undef def
   splash.file free /splash.file .undef def
+} def
+
+
+/blendit {
+  /b.w exch def
+  /b.h exch def
+
+  moveto
+
+  /b.back b.h b.w savescreen def
+  /b.mask currentpoint b.h 1 add b.w 1 add unpackimage def
+
+  currentpoint
+
+  0x303030 setcolor
+  0 0 moveto
+  b.mask b.back blend2
+
+  white setcolor
+  1 1 moveto
+  b.mask b.back blend2
+
+  moveto
+  b.back restorescreen
+
+  b.mask free
+  b.back free
 } def
 
 
