@@ -1,4 +1,8 @@
+7/3/2005:	v3.0.10
 	- translation fix (#66743)
+	- new splash graphics
+	- fixed slow timeout (#66730)
+	- enabled transparent menus
 
 1/3/2005:	v3.0.9
 	- new graphics
